Updates from ShareLaTeX

--- a/hw2/writeup/hw2.tex
+++ b/hw2/writeup/hw2.tex
@@ -66,10 +66,9 @@ In this section we explore the benefits of introducing a second attribute to our
 x_{i,scaled} = \frac{x_i-\mu_i}{\sigma_i} 
 \end{equation}
 
-These scaled values are input to kNN and used to predict price.
-
-% \input{head_dat.tex}
 \input{data_scale.tex}
+
+With the resulting scaled inputs we run 5-fold cross-validated kNN, sweeping k from 1 to 300.\footnote{To save computation time, we focused our search by increasing the $k$ step-size in the range $k\in[14,50]$ reducing the step-size outside of this range.} \Cref{fig:2p_k} shows the mean and per-fold RMSE a single run of the cv kNN; here we find that RMSE is minimized with a choice of $k=23$.
 
 \begin{figure}[!htb]
   \centering
@@ -77,6 +76,8 @@ These scaled values are input to kNN and used to predict price.
   \includegraphics[scale=.5]{2p_cv_k.pdf}
   \label{fig:2p_k}
 \end{figure}
+
+
 
 \begin{figure}[!htb]
   \centering
