--- a/hw2/writeup/2p_predict.tex
+++ b/hw2/writeup/2p_predict.tex
@@ -1,14 +1,14 @@
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Oct  7 15:41:42 2015
+% Wed Oct  7 20:33:51 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrr}
   \hline
 Year & Mileage & $\widehat{price}$ \\ 
   \hline
-2008 & 75000 & 31415.87 \\ 
+2008 & 75000 & 31646.65 \\ 
    \hline
 \end{tabular}
-\caption{Predicted Price with 2 Attributes} 
+\caption{Predicted Price with 2 Attributes (k=26)} 
 \label{tab:2p_predict}
 \end{table}
