Updates from ShareLaTeX

--- a/hw2/writeup/data_scale.tex
+++ b/hw2/writeup/data_scale.tex
@@ -4,7 +4,7 @@
 \centering
 \begin{tabular}{lrr}
   \hline
-va & $\mu$ & $\sigma$ \\ 
+Attribute & $\mu$ & $\sigma$ \\ 
   \hline
 mileage & 73652.4 & 42887.4 \\ 
   year & 2006.9 & 4.2 \\ 
