--- a/hw3/writeup/rmse_comp.tex
+++ b/hw3/writeup/rmse_comp.tex
@@ -1,16 +1,16 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Wed Oct 14 17:49:05 2015
+% Wed Oct 14 19:27:16 2015
 \begin{table}[ht]
 \centering
 \caption{Comparison of RMSE for Various Models} 
 \label{tab:rmse_comp}
 \begin{tabular}{lr}
   \hline
-Model & OOS RMSE (validate) \\ 
+Model & RMSE \\ 
   \hline
-Boosting Tree (big) & 2914.33 \\ 
-  Random Forest (big) & 2969.62 \\ 
-  LASSO (big) & 3213.25 \\ 
+Boosting Tree (big) & 2901.44 \\ 
+  Random Forest (big) & 2972.71 \\ 
+  LASSO Regression (big) & 3213.25 \\ 
   Bagging (big) & 4583.71 \\ 
   Regression Tree (big) & 4971.93 \\ 
   Pruned Regression Tree (big) & 4971.93 \\ 
