--- a/hw3/writeup/hw3.tex
+++ b/hw3/writeup/hw3.tex
@@ -27,6 +27,10 @@ We will build a series of models that can predict the selling price of a used ca
 
 \section{Regression Trees}
 
+We begin by fitting a simple regression tree to the data. We use the \texttt{rpart} package on the training data set discussed above. The \texttt{rpart} method returns an object that includes a matrix of the optimal tree prunings. We use this matrix to find the tree complexity parameter that produces the lowest error and prune the tree to this level of complexity.
+
+Because the default options on \texttt{rpart} choose a very simple tree, we lower the minimum split (i.e. smallest number of observations in a node in order for it to be split) from 20 to five, and we lower the complexity parameter from 1/100 to 5/10,000 (which effectively builds more splits into the tree).
+
 
 
 \section{Bagging}
@@ -47,11 +51,20 @@ Ultimately, the bagging algorithm does not perform very well relative to the boo
 
 In this section, we try to predict car price with a random forest algorithm. The main difference between the algorithm here and that in the prior section is that for each tree, instead of estimating based on the entire set of covariates, we estimate only on a subset $m$ of covariates. This makes the algorithm run more quickly and introduces another layer of randomness into our predictions. 
 
-We chose a value of $m=3$, which produced the best set of out-of-sample RMSE values. We also chose to stop the algorithm after 250 trees, as the predictive performance (measured by out-of-bag RMSE) fails to improve after this point. In order to speed up performance even more, we can also divide our intended number of trees (250) by the number of processors available (eight, in this case). We then build each small forest on a separate processor and combine the eight forests at the end into one larger forest and use this final combined forest to predict.
+We chose a value of $m=3$, which produced the best set of out-of-sample RMSE values. We also chose to stop the algorithm after 250 trees, as the predictive performance (measured by out-of-bag RMSE) fails to improve after this point (see \cref{fig:rf_oob_mse}). In order to speed up performance even more, we can also divide our intended number of trees (250) by the number of processors available (eight, in this case). We then build each small forest on a separate processor and combine the eight forests at the end into one larger forest and use this final combined forest to predict.
 
 The random forest algorithm ends up performing very well, nearly beating the best-in-class performance of the boosting tree.
 
+\begin{figure}[!htb]
+  \centering
+  \caption{Out-of-Bag Mean Square Error by Number of Trees}
+  \includegraphics[scale=.5]{rf_oob_mse.pdf}
+  \label{fig:rf_oob_mse}
+\end{figure}
+
 \section{Boosting Trees}
+
+\section{LASSO Regression}
 
 \section{Comparison and Out-of-Sample Test}
 
@@ -62,3 +75,29 @@ The best performing model is the large boosting tree model, followed very closel
 \input{rmse_comp}
 
 \end{document}
+
+% \input{.tex}
+
+% \begin{figure}
+%   \centering
+%   \begin{subfigure}[b]{0.49\textwidth}
+%     \caption{}
+%     \includegraphics[width=\textwidth]{.pdf}
+%     \label{fig:}
+%   \end{subfigure}
+%   \hfill
+%   \begin{subfigure}[b]{0.49\textwidth}
+%     \caption{}
+%     \includegraphics[width=\textwidth]{.pdf}
+%     \label{fig:}
+%   \end{subfigure}
+%   \caption{}
+% \end{figure}
+
+% \begin{figure}[!htb]
+%   \centering
+%   \caption{}
+%   \includegraphics[scale=.5]{.pdf}
+%   \label{fig:}
+% \end{figure}
+
