--- a/hw3/writeup/rmse_test.tex
+++ b/hw3/writeup/rmse_test.tex
@@ -1,5 +1,5 @@
-% latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Wed Oct 14 21:36:40 2015
+% latex table generated in R 3.2.1 by xtable 1.7-4 package
+% Thu Oct 15 03:48:17 2015
 \begin{table}[ht]
 \centering
 \caption{OOS RMSE for Top Three Models} 
@@ -8,9 +8,9 @@
   \hline
 Model & RMSE (Validate) & RMSE (Test) \\ 
   \hline
-Boosting Tree (big) & 2901.44 & 2870.95 \\ 
-  Random Forest (big) & 2970.38 & 2862.25 \\ 
-  LASSO Regression (big) & 3213.25 & 3072.48 \\ 
+Boosting Tree & 2895.43 & 2858.09 \\ 
+  Random Forest & 2965.92 & 2864.27 \\ 
+  LASSO Regression & 3200.54 & 3097.48 \\ 
    \hline
 \end{tabular}
 \end{table}
