Updates from ShareLaTeX

--- a/hw3/writeup/hw3.tex
+++ b/hw3/writeup/hw3.tex
@@ -139,7 +139,7 @@ As it turns out, this model actually holds its own quite well and is a strong co
 
 In \cref{tab:rmse_comp}, we list the out-of-sample RMSE of each model for the validate data set. The models denoted by ``large'' are those trained on the entire set of covariates; those denoted by ``small'' are trained only on the mileage series.
 
-The best performing model is the large boosting tree model, followed very closely by the large random forest model and the large LASSO regression model. All three models perform similarly, although we note that the boosting tree model was the most difficult to tune. In a production environment, deciding which model is best to deploy would depend not only on RMSE performance but on computational expense. Because the three models mentioned above all perform so closely, we will look more closely at the out-of-sample RMSE produced by the test set (the unused 25\% of our data-set) to make a final judgement.
+The best performing model is the large boosting tree model, followed very closely by the large random forest model and the large LASSO regression model. All three models perform similarly, although we note that the boosting tree model was the most difficult to tune. In a production environment, deciding which model to employ would depend not only on RMSE performance but on computational expense. Because the three models mentioned above all perform so closely, we will look more closely at the out-of-sample RMSE produced by the test set (the unused 25\% of our data-set) to make a final judgement.
 
 The results of this out-of-sample test are shown in \cref{tab:rmse_test}. Two things are clear. The first is that the \textit{true} out-of-sample RMSE for all three models is very close to our expected out-of-sample RMSE (which was based on the validation data set). The second is that the order of performance of the models didn't change: the finely tuned boosting tree still narrowly out-performs the random forest in the true out-of-sample test. However, it is worth noting that the difference between the two models is almost imperceptible.  This suggests that at the margin, we can differentiate what is the ``best'' model by other factors like tractability and computational expense, and out-of-sample performance will not suffer much as a result.
 
